Fixed vertical overflow

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ button {
 html, body {
   width: 100vw;
   height: 100vh;
-  overflow: hidden; }
+  overflow-x: hidden; }
 
 body {
   background-color: #111;
